@@ -26,7 +26,7 @@
 -Xms2G -Xmx5G
 ```
 
-### 2.2.显式新生代内存(Young Ceneration)
+### 2.2.显式新生代内存(Young Generation)
 
 根据[Oracle官方文档](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/sizing.html)，在堆总可用内存配置完成之后，第二大影响因素是为 `Young Generation` 在堆内存所占的比例。默认情况下，YG 的最小大小为 1310 *MB*，最大大小为*无限制*。
 
@@ -106,7 +106,7 @@ JVM具有四种类型的*GC*实现：
 ```
 -XX:+UseSerialGC
 -XX:+UseParallelGC
--XX:+USeParNewGC
+-XX:+UseParNewGC
 -XX:+UseG1GC
 ```
 
